--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down"
   },
-  "keywords": ["palm", "authentication", "biometric"],
+  "keywords": [
+    "palm",
+    "authentication",
+    "biometric"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -26,6 +30,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.11",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -33,5 +38,3 @@
     "prisma": "^5.7.0"
   }
 }
-
-
